components/gorunner/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gorunner
  namespace: gorunner
  labels:
    app: gorunner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gorunner
  template:
    metadata:
      labels:
        app: gorunner
    spec:
      serviceAccountName: gorunner-sa
      automountServiceAccountToken: True
      containers:
      - name: gorunner
        image: clementcvl/gorunner:v0.0.2
        ports:
        - containerPort: 9090
