components/gorunner/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gorunner-svc
  namespace: gorunner
spec:
  selector:
    app: gorunner
  ports:
    - protocol: TCP
      port: 9090
