components/gorunner/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gorunner-ingress
  namespace: gorunner
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: gorunner.myplayk8s.live
    http:
      paths:
      - path: /
        backend:
          serviceName: gorunner-svc
          servicePort: 9090
